<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_margin="20dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:id="@+id/dialog"
    android:background="@drawable/dialog_background"
    android:padding="10dp"
    android:orientation="vertical" >
    
    <TextView
       android:id="@+id/dialog_title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textStyle="bold"
       android:fontFamily="sans-serif"
       android:layout_gravity="center_vertical"
       android:textColor="@android:color/black"
       android:text="@string/dialog_title_placeholder" />
    
    <TextView
       android:id="@+id/dialog_text"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:fontFamily="sans-serif-light"
       android:layout_gravity="center_vertical"
       android:textColor="@android:color/black"
       android:text="@string/dialog_text_placeholder" />
    
    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:orientation="horizontal" >
    
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/loader"
        android:id="@+id/loader"/>
        
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
    <Button
        android:id="@+id/btntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/dialog_button_text"
        android:textColor="@color/theme_color"
        android:layout_marginLeft="5dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnsetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/btntry"

        android:text="تنظیمات"
        android:textColor="@color/theme_color"
        android:layout_marginLeft="5dp"
        android:textStyle="bold" />

        <Button
            android:id="@+id/btncancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btnsetting"
            android:text="انصراف"
            android:textColor="@color/theme_color"
            android:visibility="gone"
            android:textStyle="bold" />
</RelativeLayout>
</LinearLayout>